WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223194
Terminate network process when making new WebProcessPool in Lutron App
https://bugs.webkit.org/show_bug.cgi?id=223194
Summary
Terminate network process when making new WebProcessPool in Lutron App
Alex Christensen
Reported
2021-03-15 10:55:23 PDT
Terminate network process when making new WebProcessPool in Lutron App
Attachments
Patch
(4.63 KB, patch)
2021-03-15 10:58 PDT
,
Alex Christensen
ggaren
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-03-15 10:58:49 PDT
Created
attachment 423201
[details]
Patch
Alex Christensen
Comment 2
2021-03-15 10:58:52 PDT
<
rdar://problem/74674915
>
Geoffrey Garen
Comment 3
2021-03-16 10:30:44 PDT
Comment on
attachment 423201
[details]
Patch r=me
Alex Christensen
Comment 4
2021-03-16 10:42:02 PDT
http://trac.webkit.org/r274491
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug